@@ -164,16 +164,21 @@ namespace eval ::Rivet {
         lappend auto_path .
     }
 
-
-    ## eventually we have to divert Tcl ::exit to ::rivet::exit_thread
-
-    rename ::exit ::Rivet::exit
-    proc exit {code} {
-        eval ::rivet::exit_thread $code
-    }
-
 } ;## namespace eval ::Rivet
 
+    
+## eventually we have to divert Tcl ::exit to ::rivet::exit_thread
+
+rename ::exit ::Rivet::tclcore_exit
+proc ::exit {code} {
+
+    if {[string is integer $code]} {
+        eval ::rivet::exit_thread $code
+    } else {
+        eval ::rivet::exit_thread 0
+    }
+
+}
 
 ## Rivet 2.1.x supports Tcl >= 8.5, therefore there's no more need for
 ## the command incr0, as the functionality of creating a not yet
