@@ -1,3 +1,9 @@
+2015-10-22 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/init.tcl: now renaming the [exit] core command into ::Rivet::tclcore_exit
+    and replacing with a Tcl scripts that calls ::rivet::thread_exit
+    * rivet/packages/hexglyphs/hexglyphs.tcl: package generating ASCII 
+    glyphs of hexadecimal characters and punctuation character : and -
+
 2015-10-18 Massimo Manghi <mxmanghi@apache.org>
     * src/mod_rivet/rivet_worker_mpm.c: returning HTTP_INTERNAL_SERVER_ERROR
     to requests coming in during a process shutdown. This is required
